--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -34,22 +34,15 @@ jobs:
         run: ./gradlew
         env:
           OPTIMIZE_FOR_CI_CD: "1"
-          BUILD_NUMBER: ${{ steps.calculated_build_number.outputs.build_n }}
+          BUILD_NUMBER: ${{ github.run_id }}
           GITHUB_ACTIONS_URL: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           GITHUB_COMMIT_MESSAGE: "${{ github.event.head_commit.message }}"
-      - name: Upload the final artifact
-        uses: actions/upload-artifact@v4
+      - uses: ncipollo/release-action@v1
         with:
-          path: plugin/build/libs/SBA-${{ steps.read_property.outputs.value }}-all.jar
-      - uses: "marvinpinto/action-automatic-releases@latest"
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: false
-          title: "Release Build ${{ steps.read_property.outputs.value }}"
-          files: |
-            LICENSE
-            plugin/build/libs/*.jar
+          artifacts: "LICENSE,plugin/build/libs/*.jar"
+          tag: ${{ steps.read_property.outputs.value }}
+          allowUpdates: true
+          prerelease: true
 
       # - name: Upload Release Asset
       #   id: upload-release-asset 
