--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -42,7 +42,7 @@ jobs:
           artifacts: "LICENSE,plugin/build/libs/*.jar"
           tag: ${{ steps.read_property.outputs.value }}
           allowUpdates: true
-          prerelease: true
+          prerelease: false
 
       # - name: Upload Release Asset
       #   id: upload-release-asset 
