--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -59,7 +59,9 @@ dependencies {
         exclude group: 'net.kyori'
     }
     implementation 'org.spongepowered:configurate-yaml:4.1.2'
-    compileOnly "net.citizensnpcs:citizens-main:2.0.31-SNAPSHOT"
+    compileOnly "net.citizensnpcs:citizens-main:2.0.31-SNAPSHOT", {
+        exclude group: 'net.byteflux', module: 'libby-bukkit'
+    }
 }
 test {
     useJUnitPlatform()
