--- a/.github/workflows/gradle-publish-dev.yml
+++ b/.github/workflows/gradle-publish-dev.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: dev
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
