--- a/.github/workflows/gradle-publish-dev.yml
+++ b/.github/workflows/gradle-publish-dev.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'microsoft'
-          java-version: 17
+          java-version: '21'
           cache: 'gradle'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
