--- a/.github/workflows/gradle-publish-dev.yml
+++ b/.github/workflows/gradle-publish-dev.yml
@@ -10,10 +10,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: dev
-      - name: Set up JDK 17
+      - name: Set up JDK 21 temurin
         uses: actions/setup-java@v3
         with:
-          distribution: 'microsoft'
+          distribution: 'temurin'
           java-version: '21'
           cache: 'gradle'
       - name: Grant execute permission for gradlew
