--- a/.github/workflows/gradle-publish-main.yml
+++ b/.github/workflows/gradle-publish-main.yml
@@ -12,11 +12,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: release
-      - name: Set up JDK 17
+      - name: Set up JDK 21 temurin
         uses: actions/setup-java@v3
         with:
-          distribution: 'microsoft'
-          java-version: 17
+          distribution: 'temurin'
+          java-version: 21
           cache: 'gradle'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
